feat:添加项目自动化-框架待完善

--- a/_posts/start/2024-02-22-init.md
+++ b/_posts/start/2024-02-22-init.md
@@ -1,5 +1,5 @@
 ---
-title: 测试标题
+title: 初始化博客
 date: 2024-02-22 11:38:40 +0800
 categories: [开始, 第一篇]
 tags: [第一篇]     # TAG names should always be lowercase
