--- a/_posts/start/2024-02-22-init.md
+++ b/_posts/start/2024-02-22-init.md
@@ -1,5 +1,5 @@
 ---
-title: 初始化博客
+title: 初始化博客 🎉
 date: 2024-02-22 11:38:40 +0800
 categories: [开始, 第一篇]
 tags: [第一篇]     # TAG names should always be lowercase
@@ -8,4 +8,4 @@ mermaid: true
 
 > 初始化
 
-- 今天是2024年2月22日，创建了我的博客。
+- 今天是2024年2月22日，创建了我的博客。 :blush:
