fix:转载代码都是技术债内容优化

--- a/_posts/reprint/2024-03-08-code.md
+++ b/_posts/reprint/2024-03-08-code.md
@@ -32,5 +32,7 @@ mermaid: true
 > > 1. 冗余的代码都要删除。
 > > 2. 只实现那些必须实现的功能，除非绝对必要，不要引入新功能。新功能必然带来新的代码，而且新功能一旦添加，就很难废除，总是会保留下来。
 
-> 理解了Rust社区中被提到的一句话"**Rust是一门对资本友好的语言**"
-{: .prompt-info }
+<br/>
+
+> 深入思考并领悟了Rust社区中所提到的一句话："**Rust是一门对资本友好的语言**"。
+{: .prompt-tip }
