--- a/_posts/reprint/2024-03-08-code.md
+++ b/_posts/reprint/2024-03-08-code.md
@@ -1,5 +1,5 @@
 ---
-title: 转载·阮一峰的网络日志"所有代码都是技术债"
+title: 转载·"所有代码都是技术债"
 date: 2024-03-08 09:20:28 +0800
 categories: [转载, code]
 tags: [转载, 阮一峰, 好文, Coding, 技术债]     # TAG names should always be lowercase
