优化技术债文章

--- a/_posts/reprint/2024-03-08-code.md
+++ b/_posts/reprint/2024-03-08-code.md
@@ -1,11 +1,12 @@
 ---
-title: 转载·"所有代码都是技术债"
+title: "所有代码都是技术债"
 date: 2024-03-08 09:20:28 +0800
 categories: [转载, code]
 tags: [转载, 阮一峰, 好文, Coding, 技术债]     # TAG names should always be lowercase
 mermaid: true
 ---
 
+下面这段话引自[阮一峰的网络日志](https://www.ruanyifeng.com/blog/2024/03/weekly-issue-292.html){:target="_blank"}最近在网站上发表的一篇文章，题为 "所有代码都是技术债"：
 > 代码是公司的资产，公司总是鼓励大家多写代码。但是，很多人（尤其是管理层）没有意识到，**代码也是负债**。
 > 
 > 代码越多，债越多，这就是程序员常说的"技术债"。
@@ -31,6 +32,11 @@ mermaid: true
 >
 > > 1. 冗余的代码都要删除。
 > > 2. 只实现那些必须实现的功能，除非绝对必要，不要引入新功能。新功能必然带来新的代码，而且新功能一旦添加，就很难废除，总是会保留下来。
+
+**避免技术债务**
+- 尽量减少不必要的代码编写。
+- 充分了解需求，明确需求带来的价值。
+- 避免仅凭本能使用编码来解决问题。
 
 <br/>
 
