feat:优化随想录-金钱，添加随想录-其他

--- a/_posts/quotes/2024-03-04-money.md
+++ b/_posts/quotes/2024-03-04-money.md
@@ -1,7 +1,7 @@
 ---
 title: 随想录-金钱
 date: 2024-03-04 10:47:40 +0800
-categories: [随想, 金钱]
+categories: [随想, 短句]
 tags: [金钱]     # TAG names should always be lowercase
 mermaid: true
 ---
@@ -9,3 +9,6 @@ mermaid: true
 - 能够成功预测未来的不是经济学家，而是企业家。
 - 世界经济就是一个巨大的庞氏骗局。
 - 经济是由生产和消费组成。__`人们往往忽略消费`__
+- 个人的财务管理，其实只有两条原则：
+    1. 一是支出小于收入
+    2. 二是做对投资，投资对象可以是能够获利的资产，也可以是你的个人技能。
