--- a/_posts/quotes/2024-03-29-other.md
+++ b/_posts/quotes/2024-03-29-other.md
@@ -7,4 +7,4 @@ mermaid: true
 ---
 
 - 幸福的三大要素是：有要做的事（something to do）、有要爱的人（someone to love）、有寄予希望的东西（something to hope for）。
-- 永远不会变得更容易，你只会走得更快。
+- 永远不会变得更容易，你只会走得更快。<!-- 转：https://letterstoanewdeveloper.com/2020/04/27/it-never-gets-easier-you-just-go-faster/ -->
