--- a/_posts/quotes/2024-03-29-other.md
+++ b/_posts/quotes/2024-03-29-other.md
@@ -8,3 +8,5 @@ mermaid: true
 
 - 幸福的三大要素是：有要做的事（something to do）、有要爱的人（someone to love）、有寄予希望的东西（something to hope for）。
 - 永远不会变得更容易，你只会走得更快。<!-- 转：https://letterstoanewdeveloper.com/2020/04/27/it-never-gets-easier-you-just-go-faster/ -->
+- 勇气不是不害怕，而是尽管害怕，仍采取行动。
+- 自信是成功的记忆。
