feat:添加评论功能

--- a/_posts/quotes/2024-03-04-money.md
+++ b/_posts/quotes/2024-03-04-money.md
@@ -4,6 +4,7 @@ date: 2024-03-04 10:47:40 +0800
 categories: [随想, 短句]
 tags: [金钱]     # TAG names should always be lowercase
 mermaid: true
+comments: true
 ---
 
 - 能够成功预测未来的不是经济学家，而是企业家。
