--- a/_posts/start/2024-02-22-init.md
+++ b/_posts/start/2024-02-22-init.md
@@ -4,6 +4,7 @@ date: 2024-02-22 11:38:40 +0800
 categories: [开始, 第一篇]
 tags: [第一篇]     # TAG names should always be lowercase
 mermaid: true
+comments: true
 ---
 
 > 初始化
