--- a/_posts/quotes/2024-03-29-other.md
+++ b/_posts/quotes/2024-03-29-other.md
@@ -11,3 +11,5 @@ comments: true
 - 永远不会变得更容易，你只会走得更快。<!-- 转：https://letterstoanewdeveloper.com/2020/04/27/it-never-gets-easier-you-just-go-faster/ -->
 - 勇气不是不害怕，而是尽管害怕，仍采取行动。
 - 自信是成功的记忆。
+- 除非你改变了交往的人和阅读的书，否则，你的五年之后和现在完全一样。
+- 打工唯一的目的，就是偷师学艺，拿钱办事，千万不要入戏太深。否则，要么被人榨干抛弃，要么一辈子为别人做嫁衣。
