feat:添加转载记录

--- a/_posts/quotes/2024-03-29-other.md
+++ b/_posts/quotes/2024-03-29-other.md
@@ -13,4 +13,4 @@ comments: true
 - 自信是成功的记忆。
 - 除非你改变了交往的人和阅读的书，否则，你的五年之后和现在完全一样。
 - 打工唯一的目的，就是偷师学艺，拿钱办事，千万不要入戏太深。否则，要么被人榨干抛弃，要么一辈子为别人做嫁衣。
-- 并非所有的变化都是成长，并非所有的移动都是前进。
+- 并非所有的变化都是成长，并非所有的移动都是前进。<!-- 转：https://thelogicaloptimist.com/index.php/services-life-coach-conflict-management-mediation/ -->
