--- a/_posts/quotes/2024-03-04-money.md
+++ b/_posts/quotes/2024-03-04-money.md
@@ -1,8 +1,8 @@
 ---
-title: 随想录-金钱
+title: 金钱
 date: 2024-03-04 10:47:40 +0800
 categories: [随想, 短句]
-tags: [金钱]     # TAG names should always be lowercase
+tags: [赚钱]     # TAG names should always be lowercase
 mermaid: true
 ---
 
