--- a/_posts/quotes/2024-03-29-other.md
+++ b/_posts/quotes/2024-03-29-other.md
@@ -1,8 +1,8 @@
 ---
-title: 随想录-其他
+title: 短句
 date: 2024-03-29 23:06:21 +0800
 categories: [随想, 短句]
-tags: [其他]     # TAG names should always be lowercase
+tags: [励志]     # TAG names should always be lowercase
 mermaid: true
 comments: true
 ---
