--- a/_posts/quotes/2024-03-04-money.md
+++ b/_posts/quotes/2024-03-04-money.md
@@ -1,5 +1,5 @@
 ---
-title: 金钱
+title: 关于金钱的一些短句
 date: 2024-03-04 10:47:40 +0800
 categories: [随想, 短句]
 tags: [赚钱]     # TAG names should always be lowercase
