--- a/_posts/quotes/2024-03-04-money.md
+++ b/_posts/quotes/2024-03-04-money.md
@@ -12,3 +12,9 @@ mermaid: true
 - 个人的财务管理，其实只有两条原则：
     1. 一是支出小于收入
     2. 二是做对投资，投资对象可以是能够获利的资产，也可以是你的个人技能。
+- 最简单直接的赚钱路径：
+    1. 找到人们已经在付费的服务。
+    2. 将服务时间减半/让客户操作简易两倍/主动承担全部风险。
+    3. 主动询问你认识的每个人是否知道需要该服务的人。
+    4. 收费高于其他所有人。
+    5. 感到厌倦时也不要停止。
